nextgen/codeowners/tests/snapshots/codeowners_generator_test__generates_other.snap
---
source: nextgen/codeowners/tests/codeowners_generator_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"CODEOWNERS\")).unwrap()"
---
# Automatically generated by moon. DO NOT MODIFY!

# (workspace)
* @admins
/config @infra
/*.js @infra @frontend

# custom-groups
/custom-groups/path/with\ space/ @@@group

# list-paths
/list-paths/*.{js,ts,tsx} @frontend
/list-paths/*.config.js @frontend

# map-paths
/map-paths/config/ @backend
/map-paths/*.rs @rust-dev @api-team


